# TinyVoxEngine

./: .gitmodules  CMakeLists.txt  README.md
Editor/: Editor.cpp
include/: Common.hpp  SDLApplication.hpp
include/Data/: BitMask.hpp  Tree.hpp  VoxelData.hpp
include/Frame/: Frame.hpp
include/Scene/: Camera.hpp  Entity.hpp  Model.hpp  Renderer.hpp  Scene.hpp
include/Voxel/: Data.hpp  Grid.hpp  Renderer.hpp
src/: SDLApplication.cpp  UniformSizeTree.cpp  UniformSizeTree.h
src/Data/: BitMask.cpp  VoxelData.cpp
